# cherava-rs

./: Cargo.toml  Dockerfile
migrations/2024-08-22-090514_create_user/: down.sql  up.sql
migrations/2024-08-22-099643_create_workflow/: down.sql  up.sql
src/: config.rs  main.rs  routes.rs  server.rs
src/api/: api.rs  types.rs
src/controllers/: database.rs  mod.rs  scraper.rs
src/controllers/cron_scheduler/: scheduler.rs
src/controllers/email/: send.rs
src/handlers/: health.rs  mod.rs
src/handlers/auth/: auth.rs  types.rs
src/handlers/workflow/: mod.rs  scrape.rs  types.rs  workflow.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs  workflow.rs
src/repository/: database.rs  schema.rs
