[package]
name = "cherava-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.7.1"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = "4.3.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
envy = "0.4.2"
futures-util = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.17"
magic-crypt = "3.1.13"
mail-send = "0.4.9"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
scraper = "0.16.0"
sentry = "0.34.0"
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.125"
tokio = "1.40.0"
tokio-cron-scheduler = "0.11.0"
